--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - pip install -e .[test]
 
 script:
-  - py.test tests --cov gpsdio_bigquery --cov-report term-missing
+  - py.test tests --cov gpsdio_bigquery_schema --cov-report term-missing
 
 after_success:
   - coveralls
